--- a/content/dota_addons/trails/panorama/styles/custom_game/shared.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/shared.css
@@ -1,4 +1,4 @@
-.BossrushGenericWindow {
+.TrailsGenericWindow {
 	background-color: gradient( linear, 0% 0%, 0% 100%, from( #32393e ), to( #151515 ) );
 	box-shadow: #000000df -4px -4px 2px 8px;
 	border-top: 1px solid #ffffff10;
