Added delay before rounds start, requiring everyone to hit a ready button

--- a/content/dota_addons/trails/panorama/styles/custom_game/infotext.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/infotext.css
@@ -18,10 +18,10 @@
 	opacity: 1;
 }
 
-.InfoTextWindow #ReadyButton {
+.InfoTextWindow #OKButton {
 	horizontal-align: center;
 	margin: 8px;
-	height: 32px;
+	/*height: 32px;*/
 	visibility: visible;
 }
 .InfoTextWindow #ReadyText {
