--- a/content/dota_addons/trails/panorama/styles/custom_game/status_bars.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/status_bars.css
@@ -1,17 +1,25 @@
 .StatusBarContainer {
-	width: 150px;
-	height: 20px;
-	
-	flow-children: down;
-	vertical-align: top;
-	horizontal-align: left;
+	width: 100%;
+	height: 100%;
 
 	/*margin-top: 60px;*/
 	/*margin-left: 0px;*/
-
-	transition-property: opacity, transform;
-    transition-duration: 0.25s;
 	opacity: 0;
+	/*padding: 15px;*/
+	visibility: visible;
+}
+
+.StatusBarContainer.Visible {
+	opacity: 1;
+}
+
+.StatusBarBackground {
+	opacity: 1;
+	visibility: visible;
+	vertical-align: top;
+	horizontal-align: left;
+	width: 150px;
+	height: 20px;
 
 	background-color: gradient( linear, 0% 0%, 0% 100%, from( #32393e ), to( #151515 ) );
 	box-shadow: #000000df -4px -4px 2px 8px;
@@ -19,10 +27,16 @@
 	border-left: 1px solid #ffffff06;
 	border-right: 1px solid #ffffff06;
 	border-bottom: 1px solid #101010;
-	/*padding: 15px;*/
+
+	transition-property: opacity, transform;
+    transition-duration: 0.25s;
+	
+	flow-children: down;
+	vertical-align: top;
+	horizontal-align: left;
 }
 
-.StatusBarContainer.Visible {
+.StatusBarBackground.Visible {
 	opacity: 1;
 	visibility: visible;
 }
