--- a/content/dota_addons/trails/panorama/styles/custom_game/hero_select.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/hero_select.css
@@ -1,7 +1,8 @@
 .HeroSelect {
 	width: 100%;
-	height: 100%;
+	height: 96%;
 	background-color: #303030;
+	vertical-align: bottom;
 }
 
 #HeroListContainer {
