Changed round recap hero names to colored player names

--- a/content/dota_addons/trails/panorama/styles/custom_game/round_recap.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/round_recap.css
@@ -68,7 +68,7 @@
 	flow-children: down;
 }
 
-.RoundRecapHero #HeroName {
+.RoundRecapHero #PlayerName {
 	horizontal-align: center;
 	text-align: center;
 	font-size: 25px;
