--- a/content/dota_addons/trails/panorama/styles/custom_game/infotext.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/infotext.css
@@ -1,3 +1,17 @@
+.InfoTextContainer {
+	width: 100%;
+	height: 100%;
+	opacity: 1;
+	visibility: visible;
+	flow-children: right;
+	transition-property: transform;
+    transition-duration: 0.5s;
+}
+
+.InfoTextContainer.Hidden {
+	transform: translate3d(-420px, 0px, 0px);
+}
+
 .InfoTextWindow {
 	width: 400px;
 	
@@ -10,10 +24,10 @@
 
 	transition-property: opacity, transform;
     transition-duration: 0.25s;
-	opacity: 0;
+	opacity: 1;
 }
 
-.InfoTextWindow.Visible {
+.InfoTextContainer .InfoTextWindow.Visible {
 	transform: translate3d(20px, 0px, 0px);
 	opacity: 1;
 }
@@ -77,4 +91,29 @@
 
 .InfoTextWindow .TipsText {
 	text-align: left;
+}
+
+.InfoTextContainer #SlideButton {
+	horizontal-align: left;
+	vertical-align: center;
+	height: 100px;
+	width: 30px;
+	opacity: 1;
+	visibility: visible;
+	margin-bottom: 500px;
+	transform: translate3d(20px, 0px, 0px);
+	background-color: gradient( linear, 0% 0%, 0% 100%, from( #32393e ), to( #151515 ) );
+	/*box-shadow: #000000df -4px -4px 2px 8px;*/
+	border-top: 2px solid #ffffff10;
+	/*border-left: 1px solid #ffffff06;*/
+	border-right: 2px solid #ffffff06;
+	border-bottom: 2px solid #101010;
+}
+
+.InfoTextContainer #SlideButtonText {
+	font-family: Goudy Trajan;
+	font-size: 22px;
+	text-align: center;
+	vertical-align: center;
+	horizontal-align: center;
 }
