--- a/content/dota_addons/trails/panorama/styles/custom_game/turn_bonus_display.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/turn_bonus_display.css
@@ -1,17 +1,19 @@
 .TurnBonusDisplayWindow {
-	position: 74% 86.5% 0px;
+	position: 270px 65% 0px;
 	width: 270px;
-	height: 120px;
+	height: 125px;
 	
 	flow-children: down;
 	vertical-align: top;
-	horizontal-align: left;
+	horizontal-align: right;
 
-	opacity: 0;
+	opacity: 1;
+	transition-property: transform;
 }
 
 .TurnBonusDisplayWindow.Visible {
-	opacity: 1;
+	/*opacity: 1;*/
+	transform: translate3d(-270px, 0px, 0px);
 }
 
 .TurnBonusDisplayWindow .SubHeader {
