--- a/content/dota_addons/trails/panorama/styles/custom_game/turn_bonus_display.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/turn_bonus_display.css
@@ -8,27 +8,34 @@
 	horizontal-align: right;
 
 	opacity: 1;
-	transition-property: transform;
+	transition-property: transform, box-shadow;
 	transition-duration: 0.5s;
 }
 
 .TurnBonusDisplayWindow.Visible {
-	/*opacity: 1;*/
 	transform: translate3d(-270px, 0px, 0px);
+}
+
+.TurnBonusDisplayWindow.Active {
+	box-shadow: #00ff00df -4px -4px 20px 8px;
+}
+
+.TurnBonusDisplayWindow #CurrentBonusName {
+	opacity: 0.25;
+}
+.TurnBonusDisplayWindow.Active #CurrentBonusName {
+	opacity: 1;
 }
 
 .TurnBonusDisplayWindow .SubHeader {
 	font-family: Goudy Trajan;
 	font-size: 18px;
 	
-	/*color: #fefefe;*/
 	color: #d0d0d0;
 	text-shadow: 1px 1px 4px 1 #000000;
 
 	width: 100%;
 	horizontal-align: center;
-	/*height: 22px;*/
-	/*margin: 8px;*/
 
 	text-align: center;
 	border-bottom: 1px solid #80808040;
