--- a/content/dota_addons/trails/panorama/styles/custom_game/hero_select.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/hero_select.css
@@ -90,11 +90,6 @@
 	text-shadow: 0px 0px 24px 4.0;
 }
 
-#HeroDescription {
-	font-size: 20px;
-	margin-bottom: 30px;
-}
-
 #HeroInfoContainer .HeroAbilityContainer {
 	margin-bottom: 10px;
 	height: fit-children;
@@ -108,6 +103,7 @@
 }
 
 #HeroInfoContainer .Header {
+	line-height: 25px;
 	color: #a0a0a0	;
 	/*border-bottom: 1px solid #a0a0a0;*/
 	text-transform: uppercase;
@@ -116,10 +112,10 @@
 	width: 25%;
 }
 
-#HeroInfoContainer .Tooltip {
+#HeroInfoContainer .Tooltip, #HeroInfoContainer .QuartzTooltip {
 	font-size: 14px;
 	transition-property: opacity, transform;
-    transition-duration: 0.25s;
+	transition-duration: 0.25s;
 	opacity: 0;
 	background-color: gradient( linear, 0% 0%, 0% 100%, from( #32393e40 ), to( #15151540 ) );
 	box-shadow: #0000004f -4px -4px 2px 8px;
@@ -134,7 +130,7 @@
 	transform: translate3d(0px, 10px, 0px);
 }
 
-#HeroInfoContainer .Tooltip.Visible {
+#HeroInfoContainer .Tooltip.Visible, #HeroInfoContainer .QuartzTooltip.Visible {
 	color: #f0f0f0;
 	transform: translate3d(0px, 0px, 0px);
 	opacity: 1;
@@ -186,7 +182,7 @@
 	flow-children: right;
 
 	transition-property: box-shadow;
-    transition-duration: 0.1s;
+	transition-duration: 0.1s;
 }
 
 .HeroSelectCard:hover {
@@ -233,4 +229,71 @@
 	flow-children: down;
 	margin-left: 10px;
 	box-shadow: #000000 -1px -1px 4px 3px;
+}
+
+
+
+.HeroSelectQuartz {
+	margin-bottom: 10px;
+	flow-children: right;
+}
+.HeroSelectQuartz .AbilityIconContainer {
+}
+.HeroSelectQuartz #Icon {
+	width: 86px;
+	height: 64px;
+	margin-top: 5px;
+	box-shadow: fill #000000 -3px -3px 6px 6px;
+	background-size: 100% 100%;
+}
+.HeroSelectQuartz #AbilityIcon {
+	width: 64px;
+}
+.HeroSelectQuartz #AbilityInfo {
+	flow-children: down;
+	margin-left: 10px;
+	height: fit-children;
+}
+.HeroSelectQuartz #AbilityName {
+	font-family: Goudy Trajan;
+	font-size: 24px;
+	color: #e0e0e0;
+	text-shadow: 0px 0px 4px 1.0;
+	margin-bottom: 4px;
+}
+.HeroSelectQuartz #AbilityDescription {
+	font-size: 16px;
+	text-overflow: clip;
+}
+#HeroInfoContainer .QuartzTooltip {
+	height: 61px;
+	transform: translate3d(0px, 25px, 0px);
+}
+#HeroInfoContainer .QuartzTooltip.Visible {
+	transform: translate3d(0px, 15px, 0px);
+}
+
+
+
+#DescriptionAndStatsContainer {
+	flow-children: right;
+	width: 100%;
+	height: 12%;
+}
+#StatsContainer {
+	flow-children: down;
+	vertical-align: center;
+}
+.Stat {
+	font-family: Goudy Trajan;
+	font-size: 12px;
+	color: #e0e0e0;
+	text-shadow: 0px 0px 4px 1.0;
+	margin-bottom: 4px;
+}
+#HeroDescription {
+	font-size: 20px;
+	/*margin-bottom: 30px;*/
+	margin-right: 15px;
+	width: 70%;	
 }
