--- a/content/dota_addons/trails/panorama/styles/custom_game/action_bar.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/action_bar.css
@@ -35,6 +35,13 @@
 	margin-bottom: 4px;
 }
 
+.AbilityPanel.EnhancedAvailable {
+	box-shadow: fill #ff9180 -1px -1px 8px 3px;
+	/*box-shadow: fill #FF6243 -3px -3px 12px 8px;*/
+	/*border-radius: 4px;	*/
+	/*border: 1px solid #FF6243;*/
+}
+
 .AbilityPanel.no_ability
 {
 	visibility: collapse;
