Implemented most of Angel, Seraphic Ring and Thelas, reworked normal and enhanced Flamberge, normal Blessed Arrow and Molten Rain

--- a/content/dota_addons/trails/panorama/styles/custom_game/buff_list.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/buff_list.css
@@ -76,11 +76,11 @@
 	border-right:	2px solid #000000CC;
 }
 
-#AbilityImage
+#AbilityImage, #ItemImage
 {
 	width: 100%;
 	height: 100%;
-	background-size: 100% 100%;
+	background-position: center;
 }
 .item_buff #AbilityImage
 {
