--- a/content/dota_addons/trails/panorama/styles/custom_game/hero_select.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/hero_select.css
@@ -100,6 +100,7 @@
 	border-bottom: 1px solid #a0a0a0;
 	flow-children: right;
 	margin-bottom: 16px;
+	width: 100%;
 }
 
 #HeroInfoContainer .Header {
@@ -126,6 +127,7 @@
 	padding: 4px;
 	/*margin-bottom: 16px;*/
 	margin-right: 23px;
+	margin-left: 20px;
 	height: 46px;
 	transform: translate3d(0px, 10px, 0px);
 }
