--- a/content/dota_addons/trails/panorama/styles/custom_game/ability_shared.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/ability_shared.css
@@ -71,6 +71,10 @@
 	box-shadow: fill black 1px 1px 2px 2px;
 }
 
+.AbilityOverlayRoot.Upper #Hotkey {
+	visibility: collapse;
+}
+
 #HotkeyText
 {
 	color: #bba995;
