--- a/content/dota_addons/trails/panorama/styles/custom_game/custom_loading_screen.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/custom_loading_screen.css
@@ -1,72 +1,81 @@
-@define TotalLength: 40s;
+@define TotalLength: 0.5s;
 @define TimingFunc: linear;
 @define IterationCount: 1;
 @define AnimationDelay: 0s;
 
 .AddonLoadingRoot
 {
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    overflow: clip;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	overflow: clip;
 }
 
 #TitlePanel
 {
-  horizontal-align: left;
-  vertical-align: bottom;
-  margin-bottom: 150px;
-  margin-left: 100px;
-  flow-children: right;
+	horizontal-align: left;
+	vertical-align: bottom;
+	margin-bottom: 150px;
+	margin-left: 100px;
+	flow-children: right;
 }
 
 #AddonTitle
 {
-  margin-bottom: -15px;
-  vertical-align: center;
-  text-transform: uppercase;
-  font-size: 80px;
-  color: #cccccc;
-  text-shadow: 2px 2px 2px #000000;
+	margin-bottom: -15px;
+	vertical-align: center;
+	text-transform: uppercase;
+	font-size: 80px;
+	color: #cccccc;
+	text-shadow: 2px 2px 2px #000000;
 }
 
 .SeqImg
 {
-  background-repeat: no-repeat;
-  background-position: 0% 0%;
-  background-size: 100% 100%;
+	background-repeat: no-repeat;
+	background-position: 0% 0%;
+	background-size: 100% 100%;
 }
 
 #CustomBg
 {
 
-  margin-top: 0px;
-    overflow: clip;
-  pre-transform-scale2d: 1.0;
-  animation-name: gamemode_anim;
-  animation-delay: AnimationDelay;
-  animation-duration: TotalLength;
-  animation-timing-function: TimingFunc;
-  animation-iteration-count: IterationCount;
+	margin-top: 0px;
+	overflow: clip;
 }
 
 #gamemode
 {
-  margin-left: 0px;
-  /*margin-bottom: 0px;*/
-  
+	margin-left: 0px;
+	/*margin-bottom: 0px;*/
+	
 }
 
 @keyframes 'gamemode_anim'
 {
-  0%
-  {
-    transform: translateX( 0px ) translateY( 0px );
-    pre-transform-scale2d: .8;
-  }
+	0%
+	{
+		pre-transform-scale2d: 0, 1;
+	}
 
-  100%
-  {
-    transform: translateX( 0px ) translateY( -200px );
-  }
+	100%
+	{
+		/*pre-transform-scale2d: 1, 1;*/
+	}
+}
+
+#StrikeoutLine {
+	pre-transform-scale2d: 1, 1;
+	position: 400px 400px 0px;
+	width: 400px;
+	height: 200px;
+	background-color: #000000;
+/*	transition-property: width;
+	transition-duration: 1s;*/
+	animation-name: gamemode_anim;
+	animation-delay: AnimationDelay;
+	animation-duration: TotalLength;
+	animation-timing-function: TimingFunc;
+	animation-iteration-count: IterationCount;
+	visibility: collapse;
 }
