--- a/content/dota_addons/trails/panorama/styles/custom_game/action_bar.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/action_bar.css
@@ -198,7 +198,7 @@
 	flow-children: right;
 	/*background-color: #ceaa31;*/
 	height: 60px;
-	width: 842.5px;
+	width: 54.2%;
 	/*width: 200px;*/
 	/*height: 300px;*/
 }
