Added out-of-mana overlay for item icons

--- a/content/dota_addons/trails/panorama/styles/custom_game/inventory.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/inventory.css
@@ -196,3 +196,9 @@
 .no_item #ManaCost {
 	visibility: collapse;
 }
+
+.insufficient_mana DOTAItemImage
+{
+	saturation: 0.5;
+	wash-color: #1569be;
+}
