--- a/content/dota_addons/trails/panorama/styles/custom_game/ability_shared.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/ability_shared.css
@@ -29,7 +29,6 @@
 #ManaCost, #CPCost
 {
 	color: #C0C5F7;
-	font-size: 14px;
 	font-weight: bold;
 	margin-right: -2px;
 	margin-bottom: -4px;
@@ -41,11 +40,13 @@
 #ManaCost
 {
 	text-shadow: 0px 0px 6px 8 #23348C;
+	font-size: 14px;
 }
 
 #CPCost
 {
-	text-shadow: 0px 0px 6px 8 #238E37;
+	text-shadow: 0px 0px 8px 8 #238E37;
+	font-size: 18px;
 }
 
 .no_mana_cost #ManaCost
@@ -81,7 +82,7 @@
 	box-shadow: fill black 1px 1px 2px 2px;
 }
 
-.AbilityOverlayRoot.Upper #Hotkey {
+.AbilityOverlayRoot.Upper #Hotkey, .ActionBarContainer.NonSelf #Hotkey {
 	visibility: collapse;
 }
 
