--- a/content/dota_addons/trails/panorama/styles/custom_game/action_bar.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/action_bar.css
@@ -136,6 +136,11 @@
 	border: 4px solid white;
 }
 
+.ActionBarContainer.NonSelf #AbilityButton:hover, .ActionBarContainer.NonSelf #AbilityButton:active
+{
+	border: 2px solid transparent;
+}
+
 .no_level DOTAAbilityImage
 {
 	saturation: 0;
