--- a/content/dota_addons/trails/panorama/styles/custom_game/selected_unit_display.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/selected_unit_display.css
@@ -23,3 +23,7 @@
 .ActionBarContainer.NonSelf #Hotkey {
 	visibility: collapse;
 }
+
+.ActionBarContainer.SelectedUnitDisplay.Disabled {
+	opacity: 0;
+}
