--- a/content/dota_addons/trails/panorama/styles/custom_game/ui_resource_bars.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/ui_resource_bars.css
@@ -38,7 +38,7 @@
 	vertical-align: top;
 	horizontal-align: left;
 	width: 100%;
-	height: 15px;
+	height: fill-parent-flow( 1.0 );
 
 	background-color: gradient( linear, 0% 0%, 0% 100%, from( #32393e ), to( #151515 ) );
 	/*box-shadow: #000000df -4px -4px 2px 8px;*/
@@ -80,4 +80,8 @@
 	font-size: 12px;
 	font-family: Goudy Trajan Medium;
 	color: white;
+}
+
+.ResourceBarContainer.PvE #UnbalanceBarBackground {
+	visibility: collapse;
 }
