Covered ability icons in piss when insufficient CP, removed hotkeys from/greyed out unlearned abilities

--- a/content/dota_addons/trails/panorama/styles/custom_game/ability_shared.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/ability_shared.css
@@ -102,7 +102,8 @@
 .no_item #Hotkey,
 .is_passive #Hotkey,
 #stash_row #Hotkey,
-.no_hotkey #Hotkey
+.no_hotkey #Hotkey,
+.no_level #Hotkey
 {
 	visibility: collapse;
 }
