--- a/content/dota_addons/trails/panorama/styles/custom_game/boss_lifebar.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/boss_lifebar.css
@@ -97,6 +97,20 @@
 	text-align: center;
 }
 
+#Lifebar_Title_Text {
+	horizontal-align: center;
+	vertical-align: center;
+	font-size: 16px;
+	text-transform: uppercase;
+	color: #d0d0d0;
+	text-shadow: 1px 1px 2px 2.0 #000000;
+
+	/*width: 100%;*/
+	text-align: center;
+	border-bottom: 1px solid #a0a0a080;
+	/*text-decoration: underline;*/
+}
+
 .Lifebar_OuterBackground {
 	/*background-image: url('file://{images}/custom_game/healthbar_bg.png');*/
 	background-size: 600px 70px;
@@ -109,14 +123,8 @@
 
 .Lifebar_Container_Top {
 	width: 100%;
-	height: 30px;
-
-/*
-	background-image: url("s2r://panorama/images/custom_game/lifebar_bg_png.vtex");
-	background-size: 100% auto;
-	background-position: 50% 0;
-	background-repeat: no-repeat;
-	*/
+	height: 60px;
+	flow-children: down;
 }
 
 .Lifebar_Container_Bottom {
