--- a/content/dota_addons/trails/panorama/styles/custom_game/cp_conditions_window.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/cp_conditions_window.css
@@ -1,7 +1,6 @@
 .CPConditionsWindow {
 	position: 0px 15% 0px;
 	width: 300px;
-	/*background-color: #ffffff;*/
 	
 	flow-children: down;
 	vertical-align: top;
@@ -40,13 +39,11 @@
 
 .CPConditionContainer {
 	width: 100%;
-	/*height: 35px;*/
 }
 
 .CPConditionText {
 	font-family: Radiance;
 	font-size: 18px;
-	/*color: #ffffff;*/
 
 	width: 100%;
 	margin-left: 8px;
@@ -56,7 +53,25 @@
 
 	text-align: left;
 
-	/*horizontal-align: center;*/
+	font-weight: bold;
+	color: #e0e0e0;
+	text-shadow: 1px 1px 2px 2.0 #000000;
+	vertical-align: middle;
+	height: 70px;
+}
+
+#BravePoints {
+	font-family: Radiance;
+	font-size: 22px;
+
+	width: 100%;
+	margin-left: 8px;
+	margin-right: 8px;
+	margin-top: 4px;
+	line-height: 18px;
+
+	text-align: left;
+
 	font-weight: bold;
 	color: #e0e0e0;
 	text-shadow: 1px 1px 2px 2.0 #000000;
