--- a/content/dota_addons/trails/panorama/styles/custom_game/inventory.css
+++ b/content/dota_addons/trails/panorama/styles/custom_game/inventory.css
@@ -42,6 +42,7 @@
 	/*margin-bottom: 4px;*/
 	/*margin-left: 4px;*/
 	/*margin-right: 4px;*/
+	tooltip-position: top left bottom right;
 }
 
 .Charges
